Style: Update approximate symbol

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       }
     }
     //*/
-    var a = (Math.round(timeDivision) == 0) ? "Instantly" : "~ " + Math.round(timeDivision) + " " + timeType[timeTypeCounter];
+    var a = (Math.round(timeDivision) == 0) ? "Instantly" : "≈ " + Math.round(timeDivision) + " " + timeType[timeTypeCounter];
     return(a);
   }
 
