--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>ETA Calculator</title>
   <link type='text/css' rel='stylesheet' href='style.css' />
+  
 </head>
 <body>
   <div class="calcu">
